# FastAPI_Hakatoon

./: alembic.ini  main.py  pyproject.toml
auth/: database.py  manager.py
migrations/: env.py
migrations/versions/: 2ae593655716_modified_role_id_in_user.py  473ae76500a6_database_adding_phone_in_users.py  66997cb9fd9c_database_creation.py  7edc51edb8c7_update_db.py  c35a64b3a172_initial.py
models/: models.py
src/: database.py  main.py
src/auth/: manager.py  schema.py
src/operations/: models.py
