[tool.poetry]
name = "fastapiproj"
version = "0.1.0"
description = ""
authors = ["Leonid-poc <legeorg2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.29"
pydantic = "^2.7.0"
fastapi = "^0.110.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
